#420: Added Notebook to demo Exasol DB Personal Edition

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/Personal-Edition/Demo.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/Personal-Edition/Demo.ipynb
@@ -10,127 +10,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5970a003-896d-4f06-83ee-be98129c29d8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3e33476d24c492bbb9700edb8cb62e5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd06d2445c7549aaae7c0b061b69d8d8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Box(children=(Box(children=(Label(value='Configuration Store', layout=Layout(border_bottom='solid 1px', border…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%run utils/access_store_ui.ipynb\n",
-    "display(get_access_store_ui())"
+    "%run ../utils/access_store_ui.ipynb\n",
+    "display(get_access_store_ui(\"../\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "73122275-3f4a-4981-b8b3-ee6c49734996",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0487ade183234a8b8aeb07f3c8b806c3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%run utils/access_store_ui.ipynb"
+    "%run ../utils/access_store_ui.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "d7c26107-1618-4bd4-a554-d8abcb2225d2",
+   "execution_count": null,
+   "id": "d92aeb4b-bba6-49a7-8903-a7593df288d3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/jupyter/notebooks'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os \n",
-    "os.getcwd()"
+    "%run ../utils/jupysql_init.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "a683ce02-668a-43f1-8efa-c71c21bea447",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql --save udf_output\n",
+    "CREATE SCHEMA IF NOT EXISTS \"{{ai_lab_config.db_schema}}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a3df73eb-1b35-47b3-8c6c-7d244cfc718b",
    "metadata": {},
    "outputs": [],
    "source": [
     "from exasol.nb_connector.connections import open_pyexasol_connection\n",
-    "\n",
     "sql = f'CREATE SCHEMA IF NOT EXISTS \"{ai_lab_config.db_schema}\"'\n",
     "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
-    "    conn.execute(query=sql)\n"
+    "    conn.execute(query=sql)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "4b7410c6-c908-4840-94fa-e21026db7cc1",
+   "execution_count": null,
+   "id": "40546944-dd3e-4330-a9c0-8ef57c4b5deb",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'ExaConnection' object has no attribute 'import_from_parquet'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m open_pyexasol_connection(ai_lab_config, compression\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m) \u001b[38;5;28;01mas\u001b[39;00m conn:\n\u001b[1;32m      2\u001b[0m     path \u001b[38;5;241m=\u001b[39m Path(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPersonal-Edition/sample.parquet\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m     \u001b[43mconn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mimport_from_parquet\u001b[49m([path], (ai_lab_config\u001b[38;5;241m.\u001b[39mdb_schema, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSALES\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'ExaConnection' object has no attribute 'import_from_parquet'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
-    "    path = Path(\"Personal-Edition/sample.parquet\")\n",
-    "    conn.import_from_parquet([path], (ai_lab_config.db_schema, \"SALES\"))"
+    "    path = Path(\"sample.csv\")\n",
+    "    import_params = {\"column_separator\": \";\"}\n",
+    "    conn.import_from_file(path, (ai_lab_config.db_schema, \"SALES\"), import_params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8079523-7ad7-444c-84b2-5245cbee5ab8",
+   "metadata": {},
+   "source": [
+    "This does not work \n",
+    "\n",
+    "```\n",
+    "%%sql \n",
+    "import INTO \"{{ai_lab_config.db_schema}}\".\"SALES\"\n",
+    "FROM LOCAL csv file 'sample.csv' COLUMN separator = ';'\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f6ab083-d7db-4e76-8e1d-7cf7ff369c87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from exasol.nb_connector.connections import open_bucketfs_location\n",
+    "file = Path(\"text_file.txt\")\n",
+    "bfs = open_bucketfs_location(ai_lab_config)\n",
+    "remote = bfs / file.name\n",
+    "remote.write(file.read_bytes())\n",
+    "for p in bfs.iterdir():\n",
+    "    print(f'- {p.name}')"
    ]
   }
  ],
