Updated PE Demo

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/Personal-Edition/Demo.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/Personal-Edition/Demo.ipynb
@@ -9,7 +9,9 @@
     "\n",
     "This notebook demonstrates connecting to an Exasol Personal Edition database instance and using some of its features. \n",
     "\n",
-    "## 1. Open Secure Configuration Storage"
+    "## 1. Open Secure Configuration Storage\n",
+    "\n",
+    "First we need to open the Secure Configuration Storage (SCS) containing the connection information such as the database host, user, password, etc."
    ]
   },
   {
@@ -30,7 +32,7 @@
    "source": [
     "## 2. Load UI functions\n",
     "\n",
-    "Let's import basic UI functions used in this notebook and activate the Magic Jupy SQL syntax."
+    "Additionally we will import some basic UI functions used in this notebook and activate the Magic Jupy SQL syntax."
    ]
   },
   {
@@ -51,7 +53,7 @@
    "source": [
     "## 3. Create the Database Schema\n",
     "\n",
-    "The SQL statement below will create the schema if it doesn't already exist."
+    "We will create a separate database schema to contain our changes and experiments."
    ]
   },
   {
@@ -70,7 +72,7 @@
    "id": "5bb4d9a9-6c28-4826-8733-8730d9b7fa7c",
    "metadata": {},
    "source": [
-    "You can also use the pyexasol module to create the database schema:"
+    "AlteYou can also use the pyexasol module to create the database schema:"
    ]
   },
   {
