Fixed some review findings

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/Personal-Edition/Demo.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/Personal-Edition/Demo.ipynb
@@ -30,9 +30,9 @@
    "id": "d15075fa-8c9d-4e60-82d9-28d92d38ee0e",
    "metadata": {},
    "source": [
-    "## 2. Load UI functions\n",
+    "## 2. Activate JupySQL\n",
     "\n",
-    "Additionally we will import some basic UI functions used in this notebook and activate the Magic Jupy SQL syntax."
+    "Additionally we will activate the Magic [JupySQL](https://jupysql.ploomber.io) syntax."
    ]
   },
   {
@@ -42,7 +42,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../utils/access_store_ui.ipynb\n",
     "%run ../utils/jupysql_init.ipynb"
    ]
   },
@@ -72,7 +71,7 @@
    "id": "5bb4d9a9-6c28-4826-8733-8730d9b7fa7c",
    "metadata": {},
    "source": [
-    "AlteYou can also use the pyexasol module to create the database schema:"
+    "Alternatively we can use the pyexasol module to create the database schema:"
    ]
   },
   {
