Renamed new notebook from Personal-Edition/Demo.ipynb to first_steps.ipynb

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "## 2. Activate JupySQL\n",
     "\n",
-    "Additionally we will activate the Magic [JupySQL](https://jupysql.ploomber.io) syntax."
+    "First we will activate the [JupySQL](https://jupysql.ploomber.io) magics:"
    ]
   },
   {
@@ -47,58 +47,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79d61177-4d5a-4520-8c3d-6122686187e9",
-   "metadata": {},
-   "source": [
-    "## 3. Create the Database Schema\n",
-    "\n",
-    "We will create a separate database schema to contain our changes and experiments."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a683ce02-668a-43f1-8efa-c71c21bea447",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%sql --save udf_output\n",
-    "CREATE SCHEMA IF NOT EXISTS \"{{ai_lab_config.db_schema}}\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5bb4d9a9-6c28-4826-8733-8730d9b7fa7c",
-   "metadata": {},
-   "source": [
-    "Alternatively we can use the pyexasol module to create the database schema:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3df73eb-1b35-47b3-8c6c-7d244cfc718b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from exasol.nb_connector.connections import open_pyexasol_connection\n",
-    "sql = f'CREATE SCHEMA IF NOT EXISTS \"{ai_lab_config.db_schema}\"'\n",
-    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
-    "    conn.execute(query=sql)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "342a7800-253d-43a0-9bd7-89932876317d",
    "metadata": {},
    "source": [
-    "## 4. Importing Data\n",
+    "#### 2.1 Create a Database Table\n",
     "\n",
-    "This section demonstrates how to import data into the database. \n",
-    "\n",
-    "### 4.1 Create a Database Table\n",
-    "\n",
-    "First we need to create a database table:\n"
+    "We will use JupySQL to create a database table but other sections will use the table, too:"
    ]
   },
   {
@@ -122,12 +76,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94a62684-1c3f-401d-be89-4e36cdb0b142",
+   "id": "5582ac55-9c56-47d9-b286-948835d976c4",
    "metadata": {},
    "source": [
-    "### 4.2 Import a CSV File\n",
+    "## 3. PyExasol\n",
     "\n",
-    "Now we can import a CSV file into the database table:"
+    "### 3.1 Importing a CSV File\n",
+    "\n",
+    "This section demonstrates how to import a CSV file into the database.\n",
+    "\n",
+    "Function `open_pyexasol_connection()` opens a connection based on the Secure Configuration Storage (SCS)."
    ]
   },
   {
@@ -155,6 +113,14 @@
     "import INTO \"{{ai_lab_config.db_schema}}\".\"SALES\"\n",
     "FROM LOCAL csv file 'sample.csv' COLUMN separator = ';'\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61b8024f-69c1-4247-ab5a-946d5e98fe2b",
+   "metadata": {},
+   "source": [
+    "## 4. SQL Alchemy"
    ]
   },
   {
