Updated first steps notebook and sample files

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -50,7 +50,7 @@
    "id": "342a7800-253d-43a0-9bd7-89932876317d",
    "metadata": {},
    "source": [
-    "#### 2.1 Create a Database Table\n",
+    "### 2.1 Create a Database Table\n",
     "\n",
     "We will use JupySQL to create a database table but other sections will use the table, too:"
    ]
@@ -70,8 +70,51 @@
     "    amount INTEGER,\n",
     "    price DOUBLE,\n",
     "    voucher_id INTEGER,\n",
+    "    comment VARCHAR(2000),\n",
     "    canceled BOOL    \n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f83db93-e196-47ae-8e41-48eb21f50f41",
+   "metadata": {},
+   "source": [
+    "### 2.2 Importing a CSV File From Remote\n",
+    "\n",
+    "This section demonstrates how to import a CSV file from a remote source into the database."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a0945da-1314-4617-b156-e651baa687d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql --save udf_output\n",
+    "import INTO \"{{ai_lab_config.db_schema}}\".\"SALES\"\n",
+    "    FROM CSV AT 'https://dut5tonqye28.cloudfront.net/ai_lab/first_steps/' FILE 'remote.csv'\n",
+    "    COLUMN separator = ';';"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b764fd6-c3d9-49b8-bd0a-b36c6c382146",
+   "metadata": {},
+   "source": [
+    "Let's query table `SALES` to show the imported data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b31b5053-72c8-4846-941b-57d7dc267f30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql --save udf_output\n",
+    "SELECT * FROM \"{{ai_lab_config.db_schema}}\".\"SALES\""
    ]
   },
   {
@@ -81,9 +124,9 @@
    "source": [
     "## 3. PyExasol\n",
     "\n",
-    "### 3.1 Importing a CSV File\n",
+    "### 3.1 Importing a CSV File From the Local Filesystem\n",
     "\n",
-    "This section demonstrates how to import a CSV file into the database.\n",
+    "This section demonstrates how to import a CSV file from the local file system into the database.\n",
     "\n",
     "Function `open_pyexasol_connection()` opens a connection based on the Secure Configuration Storage (SCS)."
    ]
@@ -96,9 +139,19 @@
    "outputs": [],
    "source": [
     "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
-    "    path = Path(\"sample.csv\")\n",
+    "    path = Path(\"local.csv\")\n",
     "    import_params = {\"column_separator\": \";\"}\n",
     "    conn.import_from_file(path, (ai_lab_config.db_schema, \"SALES\"), import_params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "feb5f12c-5465-4580-b2ff-87e71f28238c",
+   "metadata": {},
+   "source": [
+    "### 3.2 Importing a CSV File From Remote\n",
+    "\n",
+    "This section demonstrates how to import a CSV file from a remote source into the database."
    ]
   },
   {
@@ -144,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "7f6ab083-d7db-4e76-8e1d-7cf7ff369c87",
    "metadata": {},
    "outputs": [],
