--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -103,7 +103,9 @@
    "id": "6b764fd6-c3d9-49b8-bd0a-b36c6c382146",
    "metadata": {},
    "source": [
-    "Let's query table `SALES` to show the imported data"
+    "### 2.3 Display the Imported Data \n",
+    "\n",
+    "Let's query table `SALES` to display the imported data"
    ]
   },
   {
