Updated title and introduction of first_steps.ipynb

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -5,9 +5,11 @@
    "id": "91051dad-8d45-435f-b2c9-7572e4050f58",
    "metadata": {},
    "source": [
-    "# Exasol Personal Edition Demo\n",
+    "# First Steps\n",
     "\n",
-    "This notebook demonstrates connecting to an Exasol Personal Edition database instance and using some of its features. \n",
+    "This notebook guides you through the first steps using Jupyter notebooks with Exasol.\n",
+    "\n",
+    "The notebook demonstrates connecting to an Exasol database instance and using some of its features. \n",
     "\n",
     "## 1. Open Secure Configuration Storage\n",
     "\n",
@@ -105,7 +107,7 @@
    "source": [
     "### 2.3 Display the Imported Data \n",
     "\n",
-    "Let's query table `SALES` to display the imported data"
+    "Let's query table `SALES` to display the imported data:"
    ]
   },
   {
@@ -194,7 +196,9 @@
     "\n",
     "### 5.1 Upload a File to the BucketFS\n",
     "\n",
-    "Let's upload a simple file into the BucketFS:"
+    "Let's upload a simple file into the BucketFS.\n",
+    "\n",
+    "Function `open_bucketfs_location()` returns a cursor into Exasols BucketFS."
    ]
   },
   {
