Fixed review finding

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -23,8 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../utils/access_store_ui.ipynb\n",
-    "display(get_access_store_ui(\"../\"))"
+    "%run utils/access_store_ui.ipynb\n",
+    "display(get_access_store_ui())"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../utils/jupysql_init.ipynb"
+    "%run utils/jupysql_init.ipynb"
    ]
   },
   {
@@ -142,6 +142,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "\n",
     "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
     "    path = Path(\"local.csv\")\n",
     "    import_params = {\"column_separator\": \";\"}\n",
@@ -194,9 +196,28 @@
     "* [Script-Language Containers](https://github.com/exasol/script-languages-release) (SLCs)\n",
     "* Pretrained Large Language AI Models\n",
     "\n",
-    "### 5.1 Upload a File to the BucketFS\n",
+    "### 5.1 Uploading a File to the BucketFS\n",
     "\n",
-    "Let's upload a simple file into the BucketFS.\n",
+    "First we will create a sample file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30da84a6-c1bd-4159-830e-88a2fa94ec46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile first_steps/text_file.txt\n",
+    "Hello World!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "644c5311-27e4-463c-b228-c44ce810b50e",
+   "metadata": {},
+   "source": [
+    "And now, let's upload the file into the BucketFS.\n",
     "\n",
     "Function `open_bucketfs_location()` returns a cursor into Exasols BucketFS."
    ]
@@ -209,7 +230,7 @@
    "outputs": [],
    "source": [
     "from exasol.nb_connector.connections import open_bucketfs_location\n",
-    "file = Path(\"text_file.txt\")\n",
+    "file = Path(\"first_steps/text_file.txt\")\n",
     "bfs = open_bucketfs_location(ai_lab_config)\n",
     "remote = bfs / file.name\n",
     "remote.write(file.read_bytes())"
@@ -235,6 +256,28 @@
     "bfs = open_bucketfs_location(ai_lab_config)\n",
     "for p in bfs.iterdir():\n",
     "    print(f'- {p.name}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "483ff5dd-cf57-4b51-aeff-26bf1d879a85",
+   "metadata": {},
+   "source": [
+    "### 5.3 Reading a File in the BucketFS\n",
+    "\n",
+    "We can also read the contents of a file in the BucketFS:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec2d3b55-04d1-4fc1-a307-383a64eed012",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import exasol.bucketfs as bfs\n",
+    "content = bfs.as_string(remote.read())\n",
+    "print(f'The file in the BucketFS contains:\\n{content}')"
    ]
   }
  ],
