Rephrased some sentences

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -132,7 +132,7 @@
     "\n",
     "This section demonstrates how to import a CSV file from the local file system into the database.\n",
     "\n",
-    "Function `open_pyexasol_connection()` opens a connection based on the Secure Configuration Storage (SCS)."
+    "Function `open_pyexasol_connection()` opens a connection, based on the Secure Configuration Storage (SCS)."
    ]
   },
   {
@@ -189,7 +189,7 @@
    "source": [
     "## 5. Using the Exasol Bucket File System\n",
     "\n",
-    "The [Exasol Bucket File System](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm) (BucketFS) is a powerful feature to exchange non-relational data with the database nodes in an Exasol cluster.\n",
+    "The [Exasol Bucket File System](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm) (BucketFS) is a powerful feature for exchanging non-relational data with the database nodes in an Exasol cluster.\n",
     "\n",
     "Such data can be arbitrary files including \n",
     "* Data to be processed by [User Defined Scripts](https://docs.exasol.com/db/latest/database_concepts/udf_scripts.htm) (UDFs)\n",
@@ -219,7 +219,7 @@
    "source": [
     "And now, let's upload the file into the BucketFS.\n",
     "\n",
-    "Function `open_bucketfs_location()` returns a cursor into Exasols BucketFS."
+    "Function `open_bucketfs_location()` returns a cursor into Exasols BucketFS, also using the configuration in the SCS."
    ]
   },
   {
@@ -230,6 +230,7 @@
    "outputs": [],
    "source": [
     "from exasol.nb_connector.connections import open_bucketfs_location\n",
+    "\n",
     "file = Path(\"first_steps/text_file.txt\")\n",
     "bfs = open_bucketfs_location(ai_lab_config)\n",
     "remote = bfs / file.name\n",
@@ -241,7 +242,7 @@
    "id": "82dc65f7-4d27-41b2-835a-100aa8b79d64",
    "metadata": {},
    "source": [
-    "### 5.2 List the Files in the BucketFS \n",
+    "### 5.2 Listing the Files in the BucketFS \n",
     "\n",
     "We can also list all the files currently available in the BucketFS:"
    ]
@@ -276,6 +277,7 @@
    "outputs": [],
    "source": [
     "import exasol.bucketfs as bfs\n",
+    "\n",
     "content = bfs.as_string(remote.read())\n",
     "print(f'The file in the BucketFS contains:\\n{content}')"
    ]
