Changed examples to use US airline data

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -60,21 +60,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4167f28f-36b0-4bae-8450-ddd3bb750f3b",
+   "id": "dd466ee7-7b61-4b3c-8f13-a056be60c933",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql --save udf_output\n",
-    "CREATE OR REPLACE TABLE \"{{ai_lab_config.db_schema}}\".\"SALES\" (\n",
-    "    sales_id DECIMAL(18,0),\n",
-    "    position_id INTEGER,\n",
-    "    article_id INTEGER,\n",
-    "    amount INTEGER,\n",
-    "    price DOUBLE,\n",
-    "    voucher_id INTEGER,\n",
-    "    comment VARCHAR(2000),\n",
-    "    canceled BOOL    \n",
-    ")"
+    "%%sql\n",
+    "CREATE OR REPLACE TABLE US_FLIGHTS (\n",
+    "        FL_DATE DATE,\n",
+    "        OP_CARRIER_AIRLINE_ID DECIMAL(10, 0),\n",
+    "        ORIGIN_AIRPORT_SEQ_ID DECIMAL(10, 0),\n",
+    "        ORIGIN_STATE_ABR CHAR(2),\n",
+    "        DEST_AIRPORT_SEQ_ID DECIMAL(10, 0),\n",
+    "        DEST_STATE_ABR CHAR(2),\n",
+    "        CRS_DEP_TIME CHAR(4),\n",
+    "        DEP_DELAY DECIMAL(6, 2),\n",
+    "        CRS_ARR_TIME CHAR(4),\n",
+    "        ARR_DELAY DECIMAL(6, 2),\n",
+    "        CANCELLED BOOLEAN,\n",
+    "        CANCELLATION_CODE CHAR(1),\n",
+    "        DIVERTED BOOLEAN,\n",
+    "        CRS_ELAPSED_TIME DECIMAL(6, 2),\n",
+    "        ACTUAL_ELAPSED_TIME DECIMAL(6, 2),\n",
+    "        DISTANCE DECIMAL(6, 2),\n",
+    "        CARRIER_DELAY DECIMAL(6, 2),\n",
+    "        WEATHER_DELAY DECIMAL(6, 2),\n",
+    "        NAS_DELAY DECIMAL(6, 2),\n",
+    "        SECURITY_DELAY DECIMAL(6, 2),\n",
+    "        LATE_AIRCRAFT_DELAY DECIMAL(6, 2)\n",
+    ");"
    ]
   },
   {
@@ -82,22 +95,51 @@
    "id": "1f83db93-e196-47ae-8e41-48eb21f50f41",
    "metadata": {},
    "source": [
-    "### 2.2 Importing a CSV File From Remote\n",
+    "### 2.2 Importing CSV Files From Remote\n",
     "\n",
-    "This section demonstrates how to import a CSV file from a remote source into the database."
+    "This section demonstrates how to import CSV files from a remote source into the database.\n",
+    "\n",
+    "First we will import a list of US airlines. The data is publicly accessible at the [Bureau of Transportation Statistics](https://www.transtats.bts.gov/Homepage.asp) of the US Department of Transportation."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a0945da-1314-4617-b156-e651baa687d5",
+   "id": "821b0486-0871-44ab-a96e-66e875a28842",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%sql --save udf_output\n",
-    "import INTO \"{{ai_lab_config.db_schema}}\".\"SALES\"\n",
-    "    FROM CSV AT 'https://dut5tonqye28.cloudfront.net/ai_lab/first_steps/' FILE 'remote.csv'\n",
-    "    COLUMN separator = ';';"
+    "import INTO US_AIRLINES FROM \n",
+    "  CSV AT 'https://dut5tonqye28.cloudfront.net/ai_lab/flight-info/' \n",
+    "  FILE 'US_AIRLINES.csv'\n",
+    "  COLUMN SEPARATOR = ','\n",
+    "  ROW SEPARATOR = 'CRLF'\n",
+    "  COLUMN DELIMITER = '\"'  \n",
+    "  SKIP=1;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2428c14-dd23-4891-8c2f-533f5c2b8f05",
+   "metadata": {},
+   "source": [
+    "Next, we will import data about flights in February 2024:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12b76b4f-167b-4769-b454-49fa2871a3b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql --save udf_output\n",
+    "import INTO US_FLIGHTS \n",
+    "    FROM CSV AT 'https://dut5tonqye28.cloudfront.net/ai_lab/first_steps/' \n",
+    "    FILE 'US_FLIGHTS_FEB_2024-fixed-booleans.csv'\n",
+    "    (1 FORMAT = 'MM/DD/YYYY HH12:MI:SS AM', 2..21)    \n",
+    "    SKIP=1;"
    ]
   },
   {
@@ -105,9 +147,7 @@
    "id": "6b764fd6-c3d9-49b8-bd0a-b36c6c382146",
    "metadata": {},
    "source": [
-    "### 2.3 Display the Imported Data \n",
-    "\n",
-    "Let's query table `SALES` to display the imported data:"
+    "Let's find out which is the airline with the highest delay per flight:"
    ]
   },
   {
@@ -118,7 +158,82 @@
    "outputs": [],
    "source": [
     "%%sql --save udf_output\n",
-    "SELECT * FROM \"{{ai_lab_config.db_schema}}\".\"SALES\""
+    "SELECT\n",
+    "    CARRIER_NAME \"Airline\"\n",
+    "    , SUM(CARRIER_DELAY) \"Combined Delay\"\n",
+    "    , COUNT(CARRIER_DELAY) \"Delayed Flights\"\n",
+    "    , COUNT(F.OP_CARRIER_AIRLINE_ID) \"Total flights\"\n",
+    "    , ROUND(sum(CARRIER_DELAY) / COUNT(F.OP_CARRIER_AIRLINE_ID), 1) \"Delay per flight\"\n",
+    "    FROM US_FLIGHTS F\n",
+    "    JOIN US_AIRLINES A ON A.OP_CARRIER_AIRLINE_ID = F.OP_CARRIER_AIRLINE_ID\n",
+    "    WHERE NOT (CANCELLED OR DIVERTED)\n",
+    "    GROUP BY CARRIER_NAME\n",
+    "    ORDER BY \"Delay per flight\" DESC;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c29ff5f1-1eb8-452c-8827-6c675c71dba5",
+   "metadata": {},
+   "source": [
+    "### 2.3 Importing a Parquet File From an AWS S3 Bucket\n",
+    "\n",
+    "Exasol can import Parquet files from AWS S3 Buckets, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
+    "This demo uses a file already uploaded to S3 bucket `ai-lab-example-data-s3`.\n",
+    "\n",
+    "First we will define a connection pointing to the S3 bucket:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5de58f6-b561-45c3-bc96-38523fcff58b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql --save udf_output\n",
+    "CREATE OR REPLACE CONNECTION AI_LAB_FIRST_STEPS_S3\n",
+    "    TO 'https://ai-lab-example-data-s3.s3.eu-central-1.amazonaws.com';"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dc80445-e5c0-43c1-ae34-f16326d6fb94",
+   "metadata": {},
+   "source": [
+    "Now we can import the Parquet file from S3 into the database:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "415b79f7-29b2-466f-8914-5f786f2821cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql --save udf_output\n",
+    "IMPORT INTO SALES\n",
+    "    FROM PARQUET AT AI_LAB_FIRST_STEPS_S3\n",
+    "    FILE 'first_steps/remote.parquet';"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b074a883-ae21-479c-b4fa-17962afe8149",
+   "metadata": {},
+   "source": [
+    "We will query table `SALES` again to display the imported data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "064158a4-8d37-42ab-905f-e13d6c2af3d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql --save udf_output\n",
+    "SELECT * FROM SALES where comment='remote parquet'"
    ]
   },
   {
